# SimpleProject

./: .gitignore  .mxproject  CMake-ARMClang-ToolChain.cmake  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SimpleProject.ioc  link.cfg
Inc/: main.h  usart.h
MDK-ARM/: SimpleProject.uvguix.admin  SimpleProject.uvguix.ttl  SimpleProject.uvguix.ttl.bak  SimpleProject.uvoptx  SimpleProject.uvprojx
MDK-ARM/RTE/_SimpleProject/: RTE_Components.h
MDK-ARM/SimpleProject/: SimpleProject.axf  SimpleProject.build_log.htm  SimpleProject.hex  SimpleProject.htm  SimpleProject.lnp  SimpleProject.map  SimpleProject_SimpleProject.dep  app.d  assert.d  cmsis_os2.d  croutine.d  dev_def.d  device.d  device_pin.d  dma.d  driver.d  driver_pin_mcu.d  drv_pin_mcu.d  event_groups.d  freertos.d  gpio.d  hal_pin.d  heap_4.d  list.d  log.d  main.d  port.d  queue.d  stm32f1xx_hal.d  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_msp.d  stm32f1xx_hal_pwr.d  stm32f1xx_hal_rcc.d  stm32f1xx_hal_rcc_ex.d  (+10 more)
Src/: dma.c  gpio.c  main.c  stm32f1xx_it.c  usart.c
User/3rd/LetterShell/: shell_cfg.h  shell_ext.h  shell_port.c  shell_port.h
User/App/: app.c  app.h
User/Bsp/: debug_uart.c  debug_uart.h
User/Common/: assert.c  assert.h  basic_queue.c  basic_queue.h  def.h  export.c  export.h  log.c  log.h
User/Device/: device.c  device.h  device_pin.c  device_pin.h  device_uart.c  device_uart.h
User/Driver/: driver.c  driver.h  driver_pin.h  driver_pin_mcu.c  driver_uart.c  driver_uart.h  drv_pin.h  drv_pin_mcu.c
User/Hal/: hal_pin.c  hal_pin.h
